[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrv-analysis"
version = "1.0.5"
authors = [
  { name="Robin Champseix", email="robin.champseix@gmail.com" },
]
description = "a package to calculate features from Rr Interval for HRV analyses"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.15.1",
    "astropy>=3.2.2",
    "nolds>=0.4.1",
    "scipy>=1.1.0",
    "pandas>=1.2.0",
    "matplotlib>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "codecov",
]

[project.urls]
"Homepage" = "https://github.com/Aura-healthcare/hrv-analysis"
"Bug Tracker" = "https://github.com/Aura-healthcare/hrv-analysis/issues"

[tool.hatch.build.targets.wheel]
packages = ["hrvanalysis"]